feat: cancell functions and events have started